# sfmlproject-tictactoe

./: CMakeLists.txt  README.md  main.cpp  main.h  menu.cpp  play.cpp  wincondion_and_reset.cpp
